[package]
name = "sql_aware"
version = "0.1.1"
authors = ["André de Moraes <deco.moraes@icloud.com>"]
edition = "2021"
description = "A Rust library providing a proc macro to make sql queries."
license = "MIT"
repository = "https://github.com/decomoraes/sql_aware"
readme = "README.md"
keywords = ["proc-macro", "struct", "iterable"]
categories = ["development-tools::cargo-plugins"]
homepage = "https://github.com/decomoraes/sql_aware"
documentation = "https://docs.rs/sql_aware"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.86"
sqlparser = "0.51.0"
regex = "1.11.0"

[dev-dependencies]
sql_aware = { path = "." }

[package.metadata.docs.rs]
all-features = true
